--- a/apps/web-ele/.env.production
+++ b/apps/web-ele/.env.production
@@ -20,3 +20,9 @@ VITE_ARCHIVER=true
 
 # 代理配置
 VITE_API_BASE=http://localhost:5777
+
+# 合同管理模块
+# 出租方类型 1有限责任公司 2个体工商户 3个人
+VITE_CONTRACT_LESSOR_TYPE=1
+# 出租方名称
+VITE_CONTRACT_LESSOR_NAME=广州市星萤网络有限公司
