--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -36,43 +36,18 @@
     "source.fixAll.stylelint": "explicit",
     "source.organizeImports": "never"
   },
-  "editor.defaultFormatter": "esbenp.prettier-vscode",
-  "[html]": {
-    "editor.defaultFormatter": "esbenp.prettier-vscode"
-  },
-  "[css]": {
-    "editor.defaultFormatter": "esbenp.prettier-vscode"
-  },
-  "[scss]": {
-    "editor.defaultFormatter": "esbenp.prettier-vscode"
-  },
-  "[javascript]": {
-    "editor.defaultFormatter": "esbenp.prettier-vscode"
-  },
   "[typescript]": {
     "editor.defaultFormatter": "vscode.typescript-language-features"
   },
-  "[json]": {
-    "editor.defaultFormatter": "esbenp.prettier-vscode"
-  },
-  "[markdown]": {
-    "editor.defaultFormatter": "esbenp.prettier-vscode"
-  },
-  "[jsonc]": {
-    "editor.defaultFormatter": "esbenp.prettier-vscode"
-  },
   "[vue]": {
-    "editor.defaultFormatter": "esbenp.prettier-vscode",
-    "editor.formatOnSave": true, // 显式关闭
+    "editor.defaultFormatter": "Vue.volar",
+    "editor.formatOnSave": false, // 显式关闭
     "volar.action.autoFormat": false // 禁用 Volar 的自动格式化
   },
   // extensions
   "extensions.ignoreRecommendations": true,
   // 全局禁用保存时格式化
   "editor.formatOnSave": false,
-  // 禁用 Prettier 的自动化行为
-  "prettier.requireConfig": true,
-  "prettier.disableLanguages": ["vue"],
 
   // terminal
   "terminal.integrated.cursorBlinking": true,
